@@ -15,6 +15,8 @@ v3.0-git
 v2.3.6-cvs
 ----------
 
+[jan] Use name format preference not only for paging, but for sorting too
+      (Request #8806).
 [jan] Fix photo corruption when exporting to vCard 3.0 (Bug #9100).
 
 
